Varios menus -Se creo la opción de crear varios menus. -Al crear dos menus predeterminados, estos tienen 2 menus diferetes, el primero de comidas rápidas y el segundo de comida china